--- a/less/global.less
+++ b/less/global.less
@@ -6,6 +6,12 @@ html {
   font-size: 62.5%;
 }
 
+body {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+
 html, body {
   font-family: 'Roboto', sans-serif;
 }
