--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,15 @@
 // Navigation Styles here
 
 header {
-    display: flex;
-    justify-content: space-between;
+    .flex;
     border-bottom: 3px dotted lightgrey;
+    padding: 11px 10%;
+    align-items: center;
+
+    nav a {
+        margin: 5%;
+        text-decoration: none;
+        color: black;
+        
+    }
 }
